kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: devdays
  resourceVersion: "201"
spec:
  finalizers:
  - kubernetes
status:
  phase: Active
