kubernetes/service-blazor.yml
apiVersion: v1
kind: Service
metadata:
  name: blazor
spec:
  selector:
    app: blazor
  ports:
  - port: 80
    targetPort: 80
