kubernetes/service-webapi.yml
apiVersion: v1
kind: Service
metadata:
  name: webapi
spec:
  selector:
    app: webapi
  ports:
  - port: 80
    targetPort: 80
